@@ -80,6 +80,13 @@ gint
 cong_editor_area_text_get_single_line_requisition (CongEditorAreaText *area_text,
 						   GtkOrientation orientation);
 
+gboolean
+cong_editor_area_text_xy_to_index (CongEditorAreaText *area_text,
+				   int x,
+				   int y,
+				   int *index_,
+				   int *trailing);
+
 G_END_DECLS
 
 #endif
